<resources>
    <string name="app_name">Yahtzee</string>
    <string name="yahtzee_rules_url">https://en.wikipedia.org/wiki/Yahtzee</string>
    <string name="play">Play</string>
    <string name="change_language">Change Language</string>
    <string name="add_player">Add Player</string>
    <string name="start_game">Start Game</string>
    <string name="roll">Roll Dice %d</string>
    <string-array name="ia_difficulty_levels">
        <item>Easy</item>
        <item>Hard</item>
    </string-array>
    <string name="mute_music">Mute Music</string>
    <string name="unmute_music">Unmute Music</string>
    <string name="mute_sfx">Mute SFX</string>
    <string name="unmute_sfx">Unmute SFX</string>
    <string name="rules_button">Rules</string>
    <string name="disable_sound">Mute sound effect</string>
    <string name="enable_sound">Unmute sound effect</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="switch_to_ia">Switch to IA</string>
    <string name="switch_to_player">Switch to Player</string>
    <string name="remove_player">Remove Player</string>
    <string name="player_name">Player Name</string>
    <string name="player">Player %d</string>
    <string name="select_language">Select Language</string>
    <string name="return_menu">Return</string>
    <string name="rolls_remaining">Remaining roll : %d</string>
    <string name="show_score_table">Score</string>
    <string name="show_turn">Turn to : %1$s</string>
    <string name="score_one">1 - Sum of 1</string>
    <string name="score_two">2 - Sum of 2</string>
    <string name="score_three">3 - Sum of 3</string>
    <string name="score_four">4 - Sum of 4</string>
    <string name="score_five">5 - Sum of 5</string>
    <string name="score_six">6 - Sum of 6</string>
    <string name="total_minor">Minor Total</string>
    <string name="bonus">Bonus 35 (+63)</string>
    <string name="total_with_bonus">Total + Bonus 35 </string>
    <string name="brelan">Three of a kind</string>
    <string name="carre">Four of a kind</string>
    <string name="full">Full House</string>
    <string name="petite_suite">Small Straight</string>
    <string name="grande_suite">Large Straight</string>
    <string name="yams">Yahtzee</string>
    <string name="chance">Chance</string>
    <string name="total_general">Grand Total</string>
    <string name="locked_dice_sum">Sum of locked dices : %1$d</string>
    <string name="pause">Pause</string>
    <string name="pause_menu_title">Pause</string>
    <string name="pause_menu_message">What do you want to do?</string>
    <string name="resume">Resume</string>
    <string name="quit">Quit Game</string>
    <string name="bar_figure">Bar a figure</string>
    <string name="choose_figure_to_bar">Choose a figure to bar</string>
    <string name="cancel">Cancel</string>
    <string name="game_over">Game Over</string>
    <string name="winner_message">%1$s won with a score of %2$d points!</string>
</resources>