<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <!-- Texte d'invite (Pause Menu) -->
    <TextView
        android:id="@+id/pause_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_menu_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"/>

    <!-- Bouton Reprendre -->
    <Button
        android:id="@+id/resume_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/general_btn_secondary"
        android:text="@string/resume" />

    <!-- Bouton Quitter -->
    <Button
        android:id="@+id/quit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/general_btn"
        android:text="@string/quit" />

    <!-- Bouton Mute Musique -->
    <Button
        android:id="@+id/mute_music_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/general_btn_secondary"
        android:text="@string/mute_music" />

    <!-- Bouton Mute Effets Sonores -->
    <Button
        android:id="@+id/mute_sfx_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/general_btn"
        android:text="@string/mute_sfx" />
</LinearLayout>