<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/player_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player_name"
        android:inputType="text" />

    <TextView
        android:id="@+id/ia_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="IA"
        android:textColor="#B77086"
        android:textSize="20sp" />

    <Button
        android:id="@+id/toggle_ia_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#456998"
        android:text="@string/switch_to_ia" />

    <Button
        android:id="@+id/remove_player_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#B87087"
        android:text="@string/remove_player" />
</LinearLayout>